# FakeCorpo

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml
notebooks/: 01_explore.py  02_supply_chain.py  03_streaming.py  README.md  requirements.txt
shared/: pyproject.toml
shared/fakecorpo_shared/schemas/: clock.py  pos.py  procurement.py  production.py
simulators/orchestrator-clock/: Dockerfile  pyproject.toml
simulators/orchestrator-clock/src/orchestrator_clock/: app.py  config.py  state.py  ticker.py
simulators/orchestrator-clock/tests/: test_advance.py
simulators/sim-pos-cafes/: Dockerfile  pyproject.toml
simulators/sim-pos-cafes/src/sim_pos_cafes/: config.py  consumer.py  db.py  demand.py  events.py  main.py  models.py  pos.py  seed.py  seed_data.py  weather.py
simulators/sim-pos-cafes/tests/: test_demand.py  test_pos_seed_data.py  test_weather.py
simulators/sim-procurement/: Dockerfile  pyproject.toml
simulators/sim-procurement/src/sim_procurement/: arrivals.py  config.py  consumer.py  db.py  dirty.py  events.py  main.py  models.py  procurement.py  seed.py  seed_data.py
simulators/sim-procurement/tests/: test_dirty.py  test_seed_data.py
simulators/sim-production/: Dockerfile  pyproject.toml
simulators/sim-production/src/sim_production/: config.py  consumer.py  events.py  main.py  models.py  production.py  seed.py  seed_data.py  telemetry.py
simulators/sim-production/tests/: test_recipes.py  test_telemetry.py
tools/fakecorpo-cli/: pyproject.toml
tools/fakecorpo-cli/src/fakecorpo_cli/: clock.py  main.py
