[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sim-pos-cafes"
version = "0.1.0"
description = "FakeCorpo cafe POS simulator — 15 cafés across 3 brands"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.11",
    "asyncpg>=0.29",
    "sqlalchemy[asyncio]>=2.0.30",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sim_pos_cafes"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
