[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fakecorpo-cli"
version = "0.1.0"
description = "Admin CLI for the FakeCorpo simulator"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13.7",
]

[project.scripts]
fakecorpo = "fakecorpo_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/fakecorpo_cli"]
